# ai-code-review

./: .aireview.yml  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
aicr/: cli.py  config.py  git.py  llm.py  renderer.py
prompts/: system.md
tests/: test_llm.py
